<resources>
    <string name="app_name">EasyCare</string>
    <string name="hello_blank_fragment" translatable="false"> Hello blank fragment </string>
    <string name="login"> login </string>
    <string name="login_sub"> The Easy Care app meets your household needs with problems requiring professional professionals </string>
    <string name="phone"> phone number </string>
    <string name="password"> Password </string>
    <string name="forget_password"> <u> Retrieve your password? </u> </string>
    <string name="create_new_account"> You can create a new account from </string>
    <string name="here"> here </string>
    <string name="sign_up"> Create an account </string>
    <string name="name"> the full name </string>
    <string name="email"> email </string>
    <string name="sign_up_new"> Create new account </string>
    <string name="accept"> I agree to </string>
    <string name="terms"> Terms and Conditions </string>
    <string name="have_an_acoount"> "Do you have an account " </string>
    <string name="conf_phone"> Confirm phone number </string>
    <string name="conf_phone_sub"> "The confirmation code will be sent to your phone number" </string>
    <string name="conf_now"> Confirm now </string>
    <string name="resend_conf_code"> Resend the confirmation code </string>
    <string name="welcome1_sub"> The Easy Care app meets your household needs with problems requiring professional professionals </string>
    <string name="welcome1_main"> Find the required service </string>
    <string name="ar"> AR </string>
    <string name="en"> EN </string>
    <string name="skip"> Skip </string>
    <string name="welcome2_sub"> The Easy Care app meets your household needs with problems requiring professional professionals </string>
    <string name="welcome3_sub"> The Easy Care app meets your household needs with problems requiring professional professionals </string>
    <string name="welcome3_main"> A service update alert will be sent to you </string>
    <string name="welcome2_main"> Contact your service provider </string>
    <string name="home"> home </string>
    <string name="my_orders"> my requests </string>
    <string name="my_place"> My Location </string>
    <string name="basket"> basket </string>
    <string name="profile"> Profile </string>
    <string name="edit_profile"> Edit Profile </string>
    <string name="open"> open </string>
    <string name="close"> close </string>
    <string name="our_services"> our services </string>
    <string name="more"> more </string>
    <string name="more_rates"> "most rated" </string>
    <string name="more_asked"> most requested </string>
    <string name="title_activity_maps" translatable="false"> Map </string>
    <string name="search_map_hint"> Find your service provider </string>
    <string name="my_favorites"> My Favorites </string>
    <string name="current_place"> my current location </string>
    <string name="order_type_waiting"> pending </string>
    <string name="order_type_current"> current </string>
    <string name="order_type_finished"> complete </string>
    <string name="order_type_canceled"> canceled </string>
    <string name="about"> is away </string>
    <string name="km"> kilometers </string>
    <string name="num_units"> units </string>
    <string name="conf_order"> Confirm order </string>
    <string name="rial"> SAR </string>
    <string name="Execus"> Sorry ....! </string>
    <string name="open_gps"> Open GPS in Settings </string>
    <string name="go_to_sitting"> Go to settings </string>
    <string name="about_us"> Who We Are </string>
    <string name="notification"> notifications </string>
    <string name="about_us_main"> Your home needs are problems that need professional professionals There is a proven fact for a long time that the readable content of a page will distract the reader from focusing on the external appearance of the text or the form of the paragraphs are placed on the page that he reads. Therefore the Lorem Ipsum method is used because it is </string>
    <string name="my_messages"> My Conversions </string>
    <string name="menu_last_offers"> renew offers </string>
    <string name="menu_points"> Returns and Points </string>
    <string name="menu_chat"> Conversation </string>
    <string name="menu_settings"> Settings </string>
    <string name="menu_about_us"> on the app </string>
    <string name="menu_report"> Report a problem </string>
    <string name="menu_contact_us"> contact us </string>
    <string name="menu_wallet"> My Wallet </string>
    <string name="website_url"> www.easycaresa.com </string>
    <string name="changePassword"> change password </string>
    <string name="search"> search </string>
    <string name="search_result"> search results </string>
    <string name="num_results"> number of results </string>
    <string name="no_search_result"> no search results </string>
    <string name="no_search_result_1"> The Easy Care app meets your household needs with problems requiring professional professionals </string>
    <string name="city"> city </string>
    <string name="service_type"> service type </string>
    <string name="near_companies"> nearby companies </string>
    <string name="wach_"> mobile car wash </string>
    <string name="rate"> rating </string>
    <string name="save_pass"> "Save Password" </string>
    <string name="save_profile"> Save edits </string>
    <string name="more_details"> other details </string>
    <string name="rate_service"> Service Rating </string>
    <string name="report_title"> message title </string>
    <string name="report_content"> message text </string>
    <string name="send_now"> send now </string>
    <string name="reOrder"> reorder again </string>
    <string name="contact_with_provider"> Contact your  provider </string>
    <string name="cancel_order"> cancel request </string>
    <string name="conf_finish_order"> Confirm that the request has ended </string>
    <string name="out_wach"> external wash </string>
    <string name="in_wach"> internal wash </string>
    <string name="motor_wach"> "Wash Motor" </string>
    <string name="car_type"> vehicle type </string>
    <string name="small"> small </string>
    <string name="mid"> medium </string>
    <string name="big"> large </string>
    <string name="motocycle"> motorcycle </string>
    <string name="all_services"> all services </string>
    <string name="report_problem"> Report a problem </string>
    <string name="easycare_app_txt"> The Easy Care app meets your household needs with problems that need professional professionals </string>
    <string name="online"> online </string>
    <string name="cash"> Cache </string>
    <string name="service_details"> service details </string>
    <string name="total_price"> total amount </string>
    <string name="order_now"> Order now </string>
    <string name="continue_"> continue </string>
    <string name="cancel_now"> Cancel now </string>
    <string name="choose_city"> Select your city </string>
    <string name="choose_city_1"> Select the city you live in to show nearby shows </string>
    <string name="done"> done </string>
    <string name="reset_pass"> Password recovery </string>
    <string name="old_pass"> old password </string>
    <string name="new_pass"> the new password </string>
    <string name="conf_new_pass"> Confirm new password </string>
    <string name="add_money"> Add credit </string>
    <string name="address"> address </string>
    <string name="work_times"> opening times </string>
    <string name="services"> services </string>
    <string name="products"> products </string>
    <string name="all_products"> all products </string>
    <string name="order_details"> Order Details </string>
    <string name="service_location_"> Where to implement the service </string>
    <string name="last_saved_place"> by saved location </string>
    <string name="cobon"> discount coupon </string>
    <string name="enter_cobon"> Here, write the discount coupon </string>
    <string name="price_before_discount"> Amount before discount </string>
    <string name="pay_now"> pay now </string>
    <string name="discount_amount"> discount value </string>
    <string name="order_date">  Date </string>
    <string name="order_time">  Time </string>
    <string name="no_whatsapp"> no whats up </string>
    <string name="car_name"> service </string>
    <string name="RS"> SAR </string>
    <string name="RS_short"> SR </string>
    <string name="take_location_map"> edit address </string>
    <string name="no_basket_item"> No items in the basket </string>
    <string name="soon"> soon </string>
    <string name="do_you_want_to_remove_this_item"> Do you want to remove this item? </string>
    <string name="confirm"> confirm </string>
    <string name="cancel"> cancel </string>
    <string name="new_service"> new service </string>
    <string name="dane"> done </string>
    <string name="upfront"> deposit </string>
    <string name="in_provider_location"> at the service provider location </string>
    <string name="RS_short2">" Real "</string>
    <string name="no_data"> no data </string>
    <string name="you_cant_edit_this_service"> You can t edit this service </string>
    <string name="Loging_progress"> Logging in </string>
    <string name="Logout_progress"> Signing out </string>
    <string name="passwordChenge_progress"> Editing password </string>
    <string name="activate_progress"> Account in progress </string>
    <string name="updateuser_progress"> Modifying account </string>
    <string name="signup_progress"> Creating account </string>
    <string name="deletService_progress"> The service is being deleted </string>
    <string name="deletprod_progress"> Deleting product </string>
    <string name="posttobasket_progress"> Adding to basket </string>
    <string name="update_qty_progress"> Editing number </string>
    <string name="Default"> Default </string>
    <string name="select_by"> choose by </string>
    <string name="go_basket"> Do you want to move to cart? </string>
    <string name="app_languge"> The Easy Care Application Language </string>
    <string name="conf_languge"> Are you sure that the language of the application has changed? The application will be restarted and the selected language will be shown </string>
    <string name="total">| Total </string>
    <string name="getway"> payment method </string>
    <string name="logout"> Are you sure you want to log out? </string>
    <string name="operation"> transforms </string>
    <string name="cancel_order_sure"> Are you sure you want to cancel this request? </string>
    <string name="maste_select_one"> You must select one element </string>
    <string name="select_getway"> Choose payment method </string>
    <string name="maste_select_one_ser_size"> You must select at least an item of service type and service details  </string>
    <string name="chetout_msg"> The request will be executed for the selected service provider and the rest of your requests will be kept in the basket </string>
    <string name="check_coupon">Checking coupon</string>
    <string name="new_msg">New message</string>
    <string name="getprice_service"> View basket numbers based on service provider selected </string>
    <string name="tax">tax</string>
    <string name="okey">ok</string>
    <string name="add_credit">Add Credit</string>
    <string name="there_is_error">There is an error in payment</string>
    <string name="pay_all_amount">Pay the ful amount</string>
    <string name="why_cancel">why do you want to cancel the request ?</string>
    <string name="helus">Help us improve the service by choice why</string>
    <string name="note">note</string>
    <string name="delet_convercition">Do you want to delete this conversation</string>
    <string name="attention">attention</string>
</resources>