<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cnb_disabledColor="#ECECEC"
    app:cnb_unselectedColor="#ECECEC">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_menu_home_"
        android:title="@string/home"
        app:cnb_iconColor="@color/white"/>
    <item
        android:id="@+id/my_orders"
        android:icon="@drawable/ic_menu_myorders_"
        android:title="@string/my_orders"
        app:cnb_iconColor="@color/white"/>
    <item
        android:id="@+id/my_place"
        android:icon="@drawable/ic_menu_myplace_"
        android:title="@string/my_place"
        app:cnb_iconColor="@color/white"/>
    <item
        android:id="@+id/basket"
        android:icon="@drawable/ic_menu_basket_"
        android:title="@string/basket"
        app:cnb_iconColor="@color/white"/>
    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_menu_profile_"
        android:title="@string/profile"
        app:cnb_iconColor="@color/white"/>
</menu>