<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="locale"
    android:orientation="vertical"
    android:background="@drawable/bg_req_darkblue_16dp_gradiant"
    android:gravity="center_horizontal">
<!--    bg_req_darkblue_50dp_dark_gradiant-->
    <View
        android:layout_width="50dp"
        android:layout_height="7dp"
        android:background="@drawable/bg_line_sheet_blue"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_languge"
        style="@style/text_white_bold_20"
        android:gravity="center"
        android:layout_marginTop="20dp"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/conf_languge"
        style="@style/text_white_roman_16"
        android:gravity="center"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="170dp"
        android:gravity="center"
        android:paddingEnd="25dp"
        android:paddingStart="25dp"
        android:layout_marginTop="20dp"
        android:background="@drawable/bg_req_darkblue_50dp_top">
        <Button
            android:id="@+id/save_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/continue_"
            android:textAllCaps="false"
            style="@style/text_darkblue_roman_16"
            android:background="@drawable/bg_req_white_30dp"
            android:drawableEnd="@drawable/ic_check_drawable_1"
            android:paddingStart="25dp"
            android:paddingEnd="10dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="13dp"
            />
        <Button
            android:id="@+id/cancel_btn"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="60dp"
            android:text="@string/cancel_now"
            android:textAllCaps="false"
            style="@style/text_white_roman_16"
            android:background="@drawable/bg_req_darkblue_30dp"
            android:layout_marginTop="0dp"
            android:layout_marginBottom="0dp"
            android:layout_marginStart="0dp"
            android:layout_marginEnd="0dp"
            />
    </LinearLayout>

</LinearLayout>