<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="15dp"
    android:paddingBottom="25dp"
    android:layout_marginStart="15dp"
    android:layout_marginEnd="15dp"
    android:layout_marginTop="12dp"
    android:layout_marginBottom="12dp"
    android:background="@drawable/bg_req_white_28dp_stroke"
    android:layoutDirection="locale">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="20dp">
        <ImageView
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginTop="5dp"
            android:src="@drawable/test_service1"
            />
        <LinearLayout
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="15dp"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="المركبة 01"
                style="@style/text_green_bold_12"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="تفاصيل خدمة السيارات"
                style="@style/text_darkblue_bold_16"/>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center">
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/ic_price"
                    android:layout_marginTop="2dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="85"
                    style="@style/text_darkblue_bold_14"
                    android:layout_marginStart="5dp"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="ريال سعودي"
                    style="@style/text_darkblue_roman_10"
                    android:layout_marginStart="5dp"/>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="24dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/out_wach"
            style="@style/text_white_roman_14"
            android:paddingTop="3dp"
            android:paddingBottom="8dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            android:background="@drawable/bg_req_green_dradiant_0dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_lightgray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/in_wach"
            style="@style/text_darkblue_roman_14"
            android:paddingTop="3dp"
            android:paddingBottom="8dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            />
        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/line_lightgray"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/motor_wach"
            style="@style/text_darkblue_roman_14"
            android:paddingTop="3dp"
            android:paddingBottom="8dp"
            android:paddingStart="25dp"
            android:paddingEnd="25dp"
            />
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/car_type"
        style="@style/text_darkblue_bold_16"
        android:layout_marginStart="25dp"
        android:layout_marginTop="15dp"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:layout_gravity="center_horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/small"
            style="@style/text_white_roman_14"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_req_green_gradiant_30dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/mid"
            style="@style/text_white_roman_14"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_req_gray_50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/big"
            style="@style/text_white_roman_14"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_req_gray_50dp"
            />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/motocycle"
            style="@style/text_white_roman_14"
            android:paddingStart="15dp"
            android:paddingEnd="15dp"
            android:paddingBottom="5dp"
            android:layout_marginEnd="4dp"
            android:layout_marginStart="4dp"
            android:background="@drawable/bg_req_gray_50dp"
            />
    </LinearLayout>
</LinearLayout>