<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="320dp"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="#00FFFFFF"
    android:layoutDirection="locale"
    android:layout_gravity="center"
    android:padding="8dp"
>
    <TextView
        android:visibility="gone"
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dane"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        style="@style/text_darkblue_bold_18"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <TextView
        android:layout_marginBottom="10dp"
        android:id="@+id/contentTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/add_credit"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:gravity="center"
        style="@style/text_darkblue_bold_16"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />
    <EditText

        android:id="@+id/price"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_trans_text"
   android:hint="@string/add_credit"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingTop="9dp"
        android:paddingBottom="9dp"
        android:drawablePadding="17dp"
        style="@style/text_black_roman_14"
        android:inputType="number"
        android:maxLength="30"
        />

    <View
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/gray_e1"
        app:layout_constraintTop_toTopOf="@+id/linear"/>
    <LinearLayout

        android:id="@+id/linear"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/cancel_btn"
            style="@style/text_darkblue_bold_16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_req_trans_blue_30dp_right"
            android:text="@string/cancel" />

        <View
            android:layout_width="1dp"
            android:layout_height="match_parent"
            android:background="@color/gray_e1"/>

        <Button
            android:id="@+id/ok"
            style="@style/text_darkblue_bold_16"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/bg_req_trans_blue_30dp_left"
            android:text="@string/okey" />


    </LinearLayout>
</LinearLayout>