<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layoutDirection="rtl"
    android:orientation="vertical"
    android:background="@color/white"
    android:paddingEnd="20dp"
    android:paddingStart="20dp">
    <View
        android:layout_width="50dp"
        android:layout_height="7dp"
        android:background="@drawable/bg_line_sheet"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"
        />

    <TextView
        style="@style/text_darkblue_bold_20"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="15dp"
        android:text="@string/choose_city" />
    <TextView
        style="@style/text_darkblue_roman_14"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="0dp"
        android:text="@string/choose_city_1" />
    <com.cncoderx.wheelview.Wheel3DView
        android:id="@+id/wheel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/text_black_bold_16"
        app:wheelItemCount="7"
        app:wheelCyclic="false"
        app:wheelEntries="@array/default_array"
        app:wheelItemWidth="160dp"
        app:wheelItemHeight="40dp"
        android:layout_marginTop="-30dp"
        app:wheelTextSize="18sp"
        app:wheelTextColor="@color/gray_AA"
        app:wheelSelectedTextColor="@color/black"
        app:wheelDividerColor="@color/wheel_divider_color"
        app:wheelHighlightColor="@color/wheel_highlight_color" />


    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:text="@string/conf_now"
        android:textAllCaps="false"
        style="@style/text_white_roman_18"
        android:background="@drawable/bg_req_darkblue_50dp_gradiant_x"
        android:drawableEnd="@drawable/ic_login_drawable"
        android:paddingStart="60dp"
        android:paddingEnd="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        />
</LinearLayout>