<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:gravity="center_horizontal"
    android:layoutDirection="rtl"
    tools:context=".fragments.ResetPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:weightSum="1"
        android:gravity="center_horizontal">
        <ImageView
            android:layout_width="0dp"
            android:layout_weight="0.5"
            android:layout_height="wrap_content"
            android:src="@drawable/reset_pass_img"
            android:layout_marginTop="30dp"/>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset_pass"
        style="@style/text_black_bold_24"
        android:layout_marginTop="5dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/easycare_app_txt"
        style="@style/text_black_roman_16"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"/>
    <com.chinodev.androidneomorphframelayout.NeomorphFrameLayout
        android:id="@+id/neom_frame"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:neomorph_shadow_type="outer"
        app:neomorph_layer_type="software"
        app:neomorph_background_color="@color/white_fcfcfc"
        app:neomorph_corner_radius="35dp"
        app:neomorph_elevation="@dimen/neomorph_view_elevation"
        app:neomorph_view_type="rectangular"
        app:neomorph_shadow_color="#E1E1E1"
        app:neomorph_highlight_color="@color/neomorph_highlight_color"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="23dp"
        android:layout_marginStart="23dp">
        <EditText
            android:id="@+id/email_ed"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/bg_trans"
            android:drawableStart="@drawable/bg_phone"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:textAlignment="viewStart"
            android:drawablePadding="17dp"
            android:hint="@string/email"
            style="@style/text_black_roman_14"
            android:inputType="textEmailAddress"
            android:maxLength="100"
            />
    </com.chinodev.androidneomorphframelayout.NeomorphFrameLayout>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="14"/>
    <Button
        android:id="@+id/save_btn"
        style="@style/text_white_roman_18"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="35dp"
        android:background="@drawable/bg_req_darkblue_50dp_gradiant_x"
        android:drawableEnd="@drawable/ic_login_drawable"
        android:paddingStart="60dp"
        android:paddingEnd="15dp"
        android:text="@string/send_now"
        android:textAllCaps="false"
        android:layout_marginBottom="10dp"/>
    <Space
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="20"/>


</LinearLayout>